# steganographer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  main.cpp
src/include/: compression.hpp  image.hpp  int_types.hpp  steganography.hpp
tests/: CMakeLists.txt  tests.cpp
